--- a/OR/Configs/Icebound.cfg
+++ b/OR/Configs/Icebound.cfg
@@ -124,10 +124,10 @@
 			PhysicsMaterial
 			{
 				bounceCombine = Average
-				frictionCombine = Maximum
+				frictionCombine = Minimum
 				bounciness = 0
-				staticFriction = 0.8
-				dynamicFriction = 0.6
+				staticFriction = 0
+				dynamicFriction = 0
 			}
 			Material
 			{				
