--- a/OR/Configs/MB.cfg
+++ b/OR/Configs/MB.cfg
@@ -4,7 +4,7 @@
 {
 	Body
 	{
-		name = The Magic Boulder
+		name = The_Magic_Boulder
 		randomMainMenuBody = false
 		cacheFile = OR/Cache/MB.bin
 		Template
