--- a/OR/Configs/ScienceDefinitions.cfg
+++ b/OR/Configs/ScienceDefinitions.cfg
@@ -216,7 +216,7 @@
 		SilenceSrfLandedPolarCaps = Not even the low freezing point of the water here is enough to combat the cold.
 		SilenceSrfLandedSIGNALZONE = FAINT SIGNAL DETECTED NEARBY! FURTHER INVESTIGATION REQUIRED. \n\nThe surrounding landscape is unremarkable. What could a signal be doing here?
 		
-		TheMagicBoulderSrfLanded = You've found The Magic Boulder! Enjoy the magic. Soak in the radiation. Reap the tremendous SCIENCE.
+		The_Magic_BoulderSrfLanded = You've found The Magic Boulder! Enjoy the magic. Soak in the radiation. Reap the tremendous SCIENCE.
 		
 		//Night (GOOD)
 		NightSrfLandedLowlands = You can't see anything. The light of the ship is not enough to pierce the darkness.
@@ -339,8 +339,8 @@
 		SilenceInSpaceLow = You feel very lonely. Below you, the frozen land looks empty.
 		SilenceInSpaceHigh = Silence reminds you of home. A very cold, very dead version of home.
 		
-		TheMagicBoulderInSpaceLow = Glowing green streaks dominate the surface. You pray that they're just for decoration.
-		TheMagicBoulderInSpaceHigh = Hey, wait...isn't that the thing that killed some of our ancestors from Kerbin? WHY ARE WE NEAR IT???
+		The_Magic_BoulderInSpaceLow = Glowing green streaks dominate the surface. You pray that they're just for decoration.
+		The_Magic_BoulderInSpaceHigh = Hey, wait...isn't this the thing that killed some of our friends on Kerbin? WHY ARE WE NEAR IT???
 		
 		//Night (GOOD)
 		NightInSpaceLow = The window is filled with complete darkness.
@@ -550,7 +550,7 @@
 		SilenceSrfLandedPolarCaps = The blue sky and endless ice are a painful reminder of the world we left behind all those years ago.
 		SilenceSrfLandedSIGNALZONE = TRANSLATING SIGNAL... \n\n"DAILY REPORT, CITY 17: \n'Something is wrong. The world outside has gone silent, and the--ERROR--are starting to panic. No news has come in since--ERROR. Flights sent to--ERROR--have not yet returned, and all attempts at communication with the crew have failed. We will stand by for another--ERROR--before sending out an armed expedition. Report complete. Heading out." \n\nEND OF SIGNAL.
 		
-		TheMagicBoulderSrfLanded = The Magic Boulder is telling me magical things....\nUnfortunately, I don't recognize the language it's speaking in.
+		The_Magic_BoulderSrfLanded = The Magic Boulder is telling me magical things....\nUnfortunately, I don't recognize the language it's speaking in.
 		
 		//Night (GOOD)
 		NightSrfLandedLowlands = It is pitch black. You are likely to be eaten by the kraken.
@@ -769,7 +769,7 @@
 		SilenceSrfLandedPolarCaps = The sample contains ice and a high concentration of salt.
 		SilenceSrfLandedSIGNALZONE = Broken rocks of unusual composition are mixed with the snow and dust in the sample. A little more digging reveals what appears to be a ruined wall partially buried underground.
 		
-		TheMagicBoulderSrfLanded = SAMPLE HAS BEEN SAMPLED--IS SAMPLE!
+		The_Magic_BoulderSrfLanded = SAMPLE HAS BEEN SAMPLED--IS SAMPLE!
 		
 		//Night
 		NightSrfLandedLowlands = All I see is a whole lot of dark. The sample feels rocky.
@@ -987,7 +987,7 @@
 		SilenceSrfLandedPolarCaps = The goo is frozen solid.
 		SilenceSrfLandedSIGNALZONE = The goo shudders...but not from the cold.
 		
-		TheMagicBoulderSrfLanded = The goo, at the magic touch of the boulder, turns into Jebediah Kerman. He's asking where all the snacks are.
+		The_Magic_BoulderSrfLanded = The goo, at the magic touch of the boulder, turns into Jebediah Kerman. He's asking where all the snacks are.
 		
 		//Night (GOOD)
 		NightSrfLandedLowlands = You can't see the goo.
@@ -1187,7 +1187,7 @@
 		SilenceSrfSplashed = The water is seriously cold.
 		SilenceSrfLanded = The temperature is too cold to support life as we know it.
 		
-		TheMagicBoulderSrfLanded = Oh boy! We should be dead right now!
+		The_Magic_BoulderSrfLanded = Oh boy! We should be dead right now!
 		
 		//Night (GOOD)
 		NightSrfLandedLowlands = Sorry, I can't see what the thermometer says.
@@ -1366,7 +1366,7 @@
 		SilenceSrfSplashed = The barometer advises you not to dive too deep.
 		SilenceSrfLanded = The pressure is favorable on this moon.
 		
-		TheMagicBoulderSrfLanded = Space is a vacuum. Even The Magic Boulder knew that.
+		The_Magic_BoulderSrfLanded = Space is a vacuum. Even The Magic Boulder knew that.
 		
 		//Night (GOOD)
 		NightSrfLandedLowlands = Space is a vacuum. We already knew that.
@@ -1450,7 +1450,7 @@
 		SilenceSrfSplashed = The water is almost motionless with the exception of the waves.
 		SilenceSrfLanded = The scanner senses strong vibrations from deep under the hard surface.
 		
-		TheMagicBoulderSrfLanded = The Magic Boulder is vibrating to the rhythm of M83 - Outro.
+		The_Magic_BoulderSrfLanded = The Magic Boulder is vibrating to the rhythm of M83 - Outro.
 		
 		//Night (GOOD)
 		NightSrfLanded = The ground is silent.
@@ -1551,7 +1551,7 @@
 		SilenceFlyingLow = The air contains abundant spores. Weird.
 		SilenceFlyingHigh = The air contains oxygen -- a good start to any analysis!
 		
-		TheMagicBoulderSrfLanded = The air here is everything and nothing all at once.
+		The_Magic_BoulderSrfLanded = The air here is everything and nothing all at once.
 		
 		//Night (GOOD)
 		NightSrfLanded = There isn't a significant atmosphere here.
