--- a/OR/Parallax/IncreaseSubdivisionCount.cfg
+++ b/OR/Parallax/IncreaseSubdivisionCount.cfg
@@ -32,22 +32,6 @@
 			}
 		}
 	}
-	@Body[Gurdamma]
-	{
-		%PQS
-		{
-			%maxLevel = 9
-			%Mods
-			{
-				Subdivide
-				{
-					subdivisionLevel = 36
-					subdivisionRadius = 150
-					order = 999999
-				}
-			}
-		}
-	}
 	@Body[Silence]
 	{
 		%PQS
@@ -133,7 +117,6 @@
 	{
 		%PQS
 		{
-			%maxLevel = 9
 			%Mods
 			{
 				Subdivide
@@ -237,6 +220,22 @@
 					subdivisionLevel = 32
 					subdivisionRadius = 150
 					//advancedSubdivisionLevel = 64
+					order = 999999
+				}
+			}
+		}
+	}
+	@Body[Night]
+	{
+		%PQS
+		{
+			%Mods
+			{
+				Subdivide
+				{
+					subdivisionLevel = 16
+					subdivisionRadius = 150
+					//advancedSubdivisionLevel = 14
 					order = 999999
 				}
 			}
