--- a/OR/Parallax/ParallaxTerrain.cfg
+++ b/OR/Parallax/ParallaxTerrain.cfg
@@ -28,9 +28,9 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_SteepContrast = 4
 			_SteepMidpoint = 0.7
 
-			_Metallic = 5
+			_Metallic = 0.2
 			_MetallicTint = 0.6,0.55,0.49
-			_Gloss = 90
+			_Gloss = 15
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.67
 			_EmissionColor = 0,0,0
@@ -65,26 +65,26 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_DispTex = Parallax_StockTextures/Dres/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTextures/Dres/PluginData/influence.dds
 
-			_SteepPower = 0.001
-			_SteepContrast = 2.2
+			_SteepPower = 2
+			_SteepContrast = 4
 			_SteepMidpoint = 0.62
 			_displacement_scale = 0.05
 			_displacement_offset = 0
 
-			_Metallic = 0.7
+			_Metallic = 0.1
 			_MetallicTint = 0.7, 0.7, 0.7
-			_Gloss = 45
+			_Gloss = 5
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.43
 			_EmissionColor = 0,0,0
 
 			_FresnelColor = 0.15,0.15,0.15
-			_FresnelPower = 3
+			_FresnelPower = 2
 
-			_LowStart = -80
-			_LowEnd = -79
-			_HighStart = -69
-			_HighEnd = -68
+			_LowStart = 0
+			_LowEnd = 500
+			_HighStart = 1000
+			_HighEnd = 2000
 
 		}
 	}
@@ -125,8 +125,8 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_FresnelColor = 0.1,0.1,0.1
 			_FresnelPower = 3
 
-			_LowStart = 30
-			_LowEnd = 60
+			_LowStart = 0
+			_LowEnd = 250
 			_HighStart = 2500
 			_HighEnd = 3500
 		}
@@ -156,12 +156,12 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_displacement_offset = 0
 
 			_SteepPower = 4
-			_SteepContrast = 3
+			_SteepContrast = 4
 			_SteepMidpoint = 0.6
 
-			_Metallic = 2
+			_Metallic = 0.5
 			_MetallicTint = 0.4,0.4,0.4
-			_Gloss = 75
+			_Gloss = 5
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.35
 			_EmissionColor = 0,0,0
@@ -170,7 +170,7 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_FresnelPower = 3
 
 			_LowStart = 0
-			_LowEnd = 1
+			_LowEnd = 1000
 			_HighStart = 3000
 			_HighEnd = 3350
 		}
@@ -183,39 +183,39 @@ Parallax:NEEDS[Parallax_StockTextures]
 		{
 			_SurfaceTextureScale = 0.6
 
-			_SurfaceTexture = Parallax_StockTextures/Duna/PluginData/mid00.dds
-			_SurfaceTextureMid = Parallax_StockTextures/Duna/PluginData/mid00.dds
-			_SurfaceTextureHigh = Parallax_StockTextures/Duna/PluginData/mid00.dds
-			_SteepTex = Parallax_StockTextures/Duna/PluginData/steep00.dds
+			_SurfaceTexture = Parallax_StockTextures/Eve/PluginData/mid00.dds
+			_SurfaceTextureMid = Parallax_StockTextures/Eve/PluginData/mid00.dds
+			_SurfaceTextureHigh = Parallax_StockTextures/Eve/PluginData/mid00.dds
+			_SteepTex = Parallax_StockTextures/Eve/PluginData/steep00.dds
 
-			_BumpMap = Parallax_StockTextures/Duna/PluginData/mid01.dds
-			_BumpMapMid = Parallax_StockTextures/Duna/PluginData/mid01.dds
-			_BumpMapHigh = Parallax_StockTextures/Duna/PluginData/mid01.dds
-			_BumpMapSteep = Parallax_StockTextures/Duna/PluginData/steep01.dds
+			_BumpMap = Parallax_StockTextures/Eve/PluginData/mid01.dds
+			_BumpMapMid = Parallax_StockTextures/Eve/PluginData/mid01.dds
+			_BumpMapHigh = Parallax_StockTextures/Eve/PluginData/mid01.dds
+			_BumpMapSteep = Parallax_StockTextures/Eve/PluginData/steep01.dds
 
-			_DispTex = Parallax_StockTextures/Duna/PluginData/displacement.dds
-			_InfluenceMap = Parallax_StockTextures/Duna/PluginData/influence.dds
+			_DispTex = Parallax_StockTextures/Eve/PluginData/displacement.dds
+			_InfluenceMap = Parallax_StockTextures/Eve/PluginData/influence.dds
 
-			_SteepPower = 9
-			_SteepContrast = 4.5
+			_SteepPower = 7
+			_SteepContrast = 4
 			_SteepMidpoint = 0.731
 			_displacement_scale = 0.035
 			_displacement_offset = 0
 
-			_Metallic = 1
+			_Metallic = 0.5
 			_MetallicTint = 1,1,1
-			_Gloss = 25
+			_Gloss = 10
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.56
 			_EmissionColor = 0,0,0
 
 			_FresnelColor = 0.1,0.1,0.1
-			_FresnelPower = 3
+			_FresnelPower = 1
 
 			_LowStart = 0
-			_LowEnd = 100
-			_HighStart = 2700
-			_HighEnd = 3000
+			_LowEnd = 500
+			_HighStart = 2000
+			_HighEnd = 5000
 		}
 	}
 	Body
@@ -243,12 +243,12 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_displacement_offset = 0
 
 			_SteepPower = 6
-			_SteepContrast = 4
+			_SteepContrast = 5
 			_SteepMidpoint = 0.6
 
-			_Metallic = 1
+			_Metallic = 0.1
 			_MetallicTint = 1,1,1
-			_Gloss = 25
+			_Gloss = 5
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.6
 			_EmissionColor = 0,0,0
@@ -286,13 +286,13 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_displacement_scale = 0.045
 			_displacement_offset = 0
 
-			_SteepPower = 14
-			_SteepContrast = 4
+			_SteepPower = 8
+			_SteepContrast = 5
 			_SteepMidpoint = 0.7
 
-			_Metallic = 7
+			_Metallic = 2
 			_MetallicTint = 0.6,0.55,0.49
-			_Gloss = 90
+			_Gloss = 50
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.67
 			_EmissionColor = 0,0,0
@@ -377,53 +377,9 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_displacement_scale = 0.066
 			_displacement_offset = 0
 
-			_Metallic = 1
+			_Metallic = 0.5
 			_MetallicTint = 1,1,1
-			_Gloss = 25
-			_NormalSpecularInfluence = 1
-			_Hapke = 0.4
-			_EmissionColor = 0,0,0
-
-			_FresnelColor = 0,0,0
-			_FresnelPower = 3
-
-			_LowStart = 950
-			_LowEnd = 1050
-			_HighStart = 3300
-			_HighEnd = 3600
-			
-		}
-	}
-	Body
-	{
-		name = Gurdamma
-		emissive = false
-		Textures
-		{
-			_SurfaceTextureScale = 0.8
-
-			_SurfaceTexture = Parallax_StockTextures/Pol/PluginData/mid00.dds
-			_SurfaceTextureMid = Parallax_StockTextures/Pol/PluginData/mid00.dds
-			_SurfaceTextureHigh = Parallax_StockTextures/Pol/PluginData/mid00.dds
-			_SteepTex = Parallax_StockTextures/Pol/PluginData/steep00.dds
-
-			_BumpMap = Parallax_StockTextures/Pol/PluginData/mid01.dds
-			_BumpMapMid = Parallax_StockTextures/Pol/PluginData/mid01.dds
-			_BumpMapHigh = Parallax_StockTextures/Pol/PluginData/mid01.dds
-			_BumpMapSteep = Parallax_StockTextures/Pol/PluginData/steep01.dds
-
-			_DispTex = Parallax_StockTextures/Pol/PluginData/displacement.dds
-			_InfluenceMap = Parallax_StockTextures/Pol/PluginData/influence.dds
-
-			_SteepPower = 7
-			_SteepContrast = 4
-			_SteepMidpoint = 0.7
-			_displacement_scale = 0.066
-			_displacement_offset = 0
-
-			_Metallic = 1
-			_MetallicTint = 1,1,1
-			_Gloss = 25
+			_Gloss = 10
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.4
 			_EmissionColor = 0,0,0
@@ -459,15 +415,15 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_DispTex = Parallax_StockTextures/Ike/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTextures/Ike/PluginData/influence.dds
 
-			_SteepPower = 8
-			_SteepContrast = 4.3
+			_SteepPower = 7
+			_SteepContrast = 4
 			_SteepMidpoint = 0.731
 			_displacement_scale = 0.035
 			_displacement_offset = 0.01
 
-			_Metallic = 2
+			_Metallic = 3
 			_MetallicTint = 0.4,0.4,0.4
-			_Gloss = 80
+			_Gloss = 90
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.88
 			_EmissionColor = 0,0,0
@@ -502,15 +458,15 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_DispTex = Parallax_StockTextures/Kerbin/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTextures/Kerbin/PluginData/influence.dds
 
-			_SteepPower = 8
-			_SteepContrast = 4.5
+			_SteepPower = 4
+			_SteepContrast = 3
 			_SteepMidpoint = 0.731
 			_displacement_scale = 0.13
 			_displacement_offset = 0.03
 
 			_Metallic = 0.08
 			_MetallicTint = 0.6,0.6,0.6
-			_Gloss = 22
+			_Gloss = 20
 			_NormalSpecularInfluence = 1
 			_Hapke = 1
 			_EmissionColor = 0,0,0
@@ -518,8 +474,8 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_FresnelColor = 0.1,0.1,0.1
 			_FresnelPower = 3
 
-			_LowStart = 30
-			_LowEnd = 60
+			_LowStart = 0
+			_LowEnd = 100
 			_HighStart = 2500
 			_HighEnd = 3500
 		}
@@ -548,11 +504,11 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_displacement_scale = 0.06
 			_displacement_offset = 0
 
-			_SteepPower = 0.001
+			_SteepPower = 1
 			_SteepContrast = 4
 			_SteepMidpoint = 0.6
 
-			_Metallic = 2
+			_Metallic = 0.5
 			_MetallicTint = 0.8,0.78,0.74
 			_Gloss = 35
 			_NormalSpecularInfluence = 1
@@ -560,12 +516,12 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_EmissionColor = 0,0,0
 
 			_FresnelColor = 0.1,0.1,0.1
-			_FresnelPower = 3
+			_FresnelPower = 2
 
-			_LowStart = 10500
-			_LowEnd = 11250
-			_HighStart = 30000
-			_HighEnd = 33500
+			_LowStart = 0
+			_LowEnd = 250
+			_HighStart = 1000
+			_HighEnd = 5000
 		}
 	}
 	Body
@@ -598,7 +554,7 @@ Parallax:NEEDS[Parallax_StockTextures]
 			
 			_Metallic = 4
 			_MetallicTint = 0.8,0.78,0.74
-			_Gloss = 35
+			_Gloss = 90
 			_NormalSpecularInfluence = 1
 			_Hapke = 0.8
 			_EmissionColor = 0,0,0
@@ -606,7 +562,7 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_FresnelColor = 0.1,0.1,0.1
 			_FresnelPower = 3
 
-			_LowStart = 100
+			_LowStart = 0
 			_LowEnd = 300
 			_HighStart = 3000
 			_HighEnd = 3350
@@ -634,7 +590,7 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_InfluenceMap = Parallax_StockTextures/Kerbin/PluginData/influence.dds
 
 			_SteepPower = 8
-			_SteepContrast = 4.5
+			_SteepContrast = 3
 			_SteepMidpoint = 0.731
 			_displacement_scale = 0.13
 			_displacement_offset = 0.03
@@ -649,9 +605,9 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_FresnelColor = 0.1,0.1,0.1
 			_FresnelPower = 3
 
-			_LowStart = 30
-			_LowEnd = 60
-			_HighStart = 2500
+			_LowStart = 0
+			_LowEnd = 200
+			_HighStart = 1500
 			_HighEnd = 3500
 		}
 	}
@@ -697,6 +653,50 @@ Parallax:NEEDS[Parallax_StockTextures]
 			_LowEnd = 11250
 			_HighStart = 30000
 			_HighEnd = 33500
+		}
+	}
+	Body
+	{
+		name = Night
+		emissive = false
+		Textures
+		{
+			_SurfaceTextureScale = 0.8
+
+			_SurfaceTexture = Parallax_StockTextures/Bop/PluginData/low00.dds
+			_SurfaceTextureMid = Parallax_StockTextures/Bop/PluginData/mid00.dds
+			_SurfaceTextureHigh = Parallax_StockTextures/Bop/PluginData/mid00.dds
+			_SteepTex = Parallax_StockTextures/Dres/PluginData/steep00.dds
+
+			_BumpMap = Parallax_StockTextures/Bop/PluginData/low01.dds
+			_BumpMapMid = Parallax_StockTextures/Bop/PluginData/mid01.dds
+			_BumpMapHigh = Parallax_StockTextures/Bop/PluginData/mid01.dds
+			_BumpMapSteep = Parallax_StockTextures/Dres/PluginData/steep01.dds
+
+			_DispTex = Parallax_StockTextures/Bop/PluginData/displacement.dds
+			_InfluenceMap = Parallax_StockTextures/Bop/PluginData/influence.dds
+
+			_displacement_scale = 0.06
+			_displacement_offset = 0
+
+			_SteepPower = 0.01
+			_SteepContrast = 0.01
+			_SteepMidpoint = 0.6
+
+			_Metallic = 0.01
+			_MetallicTint = 0,0,0
+			_Gloss = 0.01
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.01
+			_EmissionColor = 0,0,0
+
+			_FresnelColor = 0,0,0
+			_FresnelPower = 1
+
+			_LowStart = 0
+			_LowEnd = 50
+			_HighStart = 100
+			_HighEnd = 1000
 		}
 	}
 }
