--- a/OR/Parallax/Scatters.cfg
+++ b/OR/Parallax/Scatters.cfg
@@ -34,23 +34,6 @@
 			}
 		}
 	}
-	@Body[Gurdamma]
-	{
-		%PQS
-		{
-			%Mods
-			{
-				ParallaxScatter
-				{
-					order = 999999
-				}
-				ScatterDistribute
-				{
-					order = 999998
-				}
-			}
-		}
-	}
 	@Body[Silence]
 	{
 		%PQS
@@ -239,6 +222,23 @@
 		}
 	}
 	@Body[Cetus]
+	{
+		%PQS
+		{
+			%Mods
+			{
+				ParallaxScatter
+				{
+					order = 999999
+				}
+				ScatterDistribute
+				{
+					order = 999998
+				}
+			}
+		}
+	}
+	@Body[Night]
 	{
 		%PQS
 		{
